# PyQCodeEditor

./: License  README.md  pyproject.toml
example/: simple_cxx_editor.py  simple_editor.py  simple_glsl_editor.py  simple_json_editor.py  simple_lua_editor.py  simple_python_editor.py
pyqcodeeditor/: QCodeEditor.py  QLanguage.py  QLanguageCompleter.py  QLineNumberArea.py  QStyleSyntaxHighlighter.py  QSyntaxStyle.py  utils.py
pyqcodeeditor/completers/: QCXXCompleter.py  QGLSLCompleter.py  QLuaCompleter.py  QPythonCompleter.py  __init__.py
pyqcodeeditor/highlighters/: QCXXHighlighter.py  QGLSLHighlighter.py  QHighlightBlockRule.py  QHighlightRule.py  QJSONHighlighter.py  QLuaHighlighter.py  QPythonHighlighter.py  __init__.py
pyqcodeeditor/resources/languages/: cxx.json  glsl.json  lua.json  python.json
