[tool.poetry]
name = "pyqcodeeditor"
version = "0.3.2"
description = "A qtpy implementation of Megaxela’s QCodeEditor (based on C++ Qt)."
authors = ["zimolab <zimolab@aliyun.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
qtpy = "^2.4.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
